# Zij

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: fixer.md  implementer.md  reviewer.md  spec-author.md  test-author.md  triage.md
.claude/commands/: build-resume.md  fix.md  review.md  sprint-plan.md  sprint-start.md  triage.md
.claude/hooks/: block-merge.ps1  deny.ps1  format.ps1  git-guard.ps1  lib.ps1  spec-freeze.ps1  tests-green.ps1
.claude/skills/: VENDORED.md
.github/workflows/: ci.yml
backend/: config.py  config.toml  events.py  health.py  integrity.py  main.py  models.py  registry.py  scheduler.py  schema.sql  store.py
backend/sources/: __init__.py  aisstream.py  base.py  opensky.py  overpass.py
backend/tests/: conftest.py  test_aisstream.py  test_api.py  test_api_regions_unit.py  test_baseline.py  test_config.py  test_config_acceptance.py  test_config_precedence.py  test_config_precedence_acceptance.py  test_config_sections_acceptance.py  test_events_unit.py  test_fixtures_shape.py  test_health_status_acceptance.py  test_integrity.py  test_integrity_unit.py  test_main_scheduler_lifespan.py  test_models_acceptance.py  test_models_unit.py  test_opensky.py  test_overpass.py  test_scheduler.py  test_scheduler_backoff_stale.py  test_scheduler_backoff_stale_unit.py  test_scheduler_controls_refresh_unit.py  test_scheduler_fallback_staletimer_unit.py  test_scheduler_region_toggle.py  test_scheduler_region_toggle_unit.py  test_scheduler_unit.py  test_scheduler_write_path.py  test_store_acceptance.py  test_store_config_presets_acceptance.py  test_store_config_presets_unit.py  test_store_corruption_acceptance.py  test_store_corruption_unit.py  (+3 more)
docs/: agentic-build.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
plans/: README.md  backlog-v0.md  backlog-v1.md
scripts/: fetch_fixtures.py  fetch_landmask.py
(+215 files in other folders)
