[project]
name = "zij"
version = "0.0.0"
description = "Zij — real-time strategic maritime/air situational monitor"
requires-python = ">=3.13"
# Runtime deps intentionally empty at Phase 0 — added during the v0 spike sprint
# per design/docs/STRUCTURE.md §5 (fastapi, uvicorn, httpx, websockets,
# sse-starlette, pydantic, pydantic-settings, shapely, platformdirs).
dependencies = [
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Distribution name is "zij"; import root is "backend" (design/docs/STRUCTURE.md §2, ADR-4).
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
